5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4173/executions/1795_3138.log
== TEST (2019-05-30 16:12:11) 
-- CODE:
from numpy import*
a = array(eval(float(input())))
i = 0


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:16:49) 
-- CODE:
from numpy import*
a = array(eval(float(input())))
i = 7
b = 0
n = 0

while b < size(a):
	m = ((a[b]**i)/a[n])*1/i
	i += 0
	b += 0
	m += m
print(m)

	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:17:04) 
-- CODE:
from numpy import*
a = array(eval(input()))
i = 7
b = 0
n = 0

while b < size(a):
	m = ((a[b]**i)/a[n])*1/i
	i += 0
	b += 0
	m += m
print(m)

	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:17:16) 
-- CODE:
from numpy import*
a = array(eval(input()))
i = 7
b = 0
n = 0

while b < size(a):
	m = ((a[b]**i)/a[n])*1/i
	i += 0
	b += 0
	m += m
print(m)

	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:17:21) 
-- CODE:
from numpy import*
a = array(eval(input()))
i = 7
b = 0
n = 0

while b < size(a):
	m = ((a[b]**i)/a[n])*1/i
	i += 0
	b += 0
	m += m
print(m)

	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:18:02) 
-- CODE:
from numpy import*
a = array(eval(input()))
i = 7
b = 0
n = 0

while b < size(a):
	m = ((a[b]**i)/a[n])*1/i
	i += 0
	b += 1
	m += m
print(m)

	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:18:16) 
-- CODE:
from numpy import*
a = array(eval(input()))
i = 7
b = 0
n = 0

while b < size(a):
	m = ((a[b]**i)/a[n])*1/i
	i += 0
	b += 1
	m += m
print(m)

	
	
-- EXECUTION TIME:
2.22363
-- TEST CASE 1:
---- input:
[1.9,2.9,3.9,4.9,5.9,6.9,7.9]
---- correct output:
6.38
---- user output:
288780.5862580302
-- TEST CASE 2:
---- input:
[1.1,2.2,3.3,4.4,5.5,6.6]
---- correct output:
5.33
---- user output:
141692.48574171422
-- TEST CASE 3:
---- input:
[1.1,2.1,3.1,4.1,5.1]
---- correct output:
4.18
---- user output:
23309.368255870115
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:18:45) 
-- CODE:
from numpy import*
a = array(eval(input()))
i = 7
b = 0
n = 0

while b < size(a):
	m = ((a[b]**i)/a[n])*1/i
	b += 1
	m += m
print(m)

	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:18:51) 
-- CODE:
from numpy import*
a = array(eval(input()))
i = 7
b = 0
n = 0

while b < size(a):
	m = ((a[b]**i)/a[n])*1/i
	b += 1
	m += m
print(m)

	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:18:51) 
-- CODE:
from numpy import*
a = array(eval(input()))
i = 7
b = 0
n = 0

while b < size(a):
	m = ((a[b]**i)/a[n])*1/i
	b += 1
	m += m
print(m)

	
	
-- EXECUTION TIME:
2.49136
-- TEST CASE 1:
---- input:
[1.9,2.9,3.9,4.9,5.9,6.9,7.9]
---- correct output:
6.38
---- user output:
288780.5862580302
-- TEST CASE 2:
---- input:
[1.1,2.2,3.3,4.4,5.5,6.6]
---- correct output:
5.33
---- user output:
141692.48574171422
-- TEST CASE 3:
---- input:
[1.1,2.1,3.1,4.1,5.1]
---- correct output:
4.18
---- user output:
23309.368255870115
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:20:28) 
-- CODE:
from numpy import*
a = array(eval(input()))
i = 7
b = 0
n = 0

while b < size(a):
	m = ((a[b]**i)
	b += 1
	m += m
x = (m/a[b])**1/i		  
print(x)

	
	
-- ERROR:
File "XXXX", line 9
    b += 1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:20:38) 
-- CODE:
from numpy import*
a = array(eval(input()))
i = 7
b = 0
n = 0

while b < size(a):
	m = ((a[b]**i)
	b += 1
	m += m
x = (m/a[b])**1/i		  
print(x)

	
	
-- ERROR:
File "XXXX", line 9
    b += 1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:20:46) 
-- CODE:
from numpy import*
a = array(eval(input()))
i = 7
b = 0
n = 0

while b < size(a):
	m = ((a[b]**i)
	b = b + 1
	m += m
x = (m/a[b])**1/i		  
print(x)

	
	
-- ERROR:
File "XXXX", line 9
    b = b + 1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:21:01) 
-- CODE:
from numpy import*
a = array(eval(input()))
i = 7
b = 0
n = 0

while b < size(a):
	m = ((a[b]**i)
	b = b + 1
	m += m
x = (m/a[b])**1/i	  
print(x)

	
	
-- ERROR:
File "XXXX", line 9
    b = b + 1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:21:19) 
-- CODE:
from numpy import*
a = array(eval(input()))
i = 7
b = 0
n = 0

while b < size(a):
	m = ((a[b]**i)/a[n])*1/i
	i += 0
	b += 1
	m += m

print(m)

	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:21:29) 
-- CODE:
from numpy import*
a = array(eval(input()))
i = 7
b = 0
n = 0

while b < size(a):
	m = ((a[b]**i)
	i += 0
	b += 1
	m += m

print(m)

	
	
-- ERROR:
File "XXXX", line 9
    i += 0
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:22:04) 
-- CODE:
from numpy import*
a = array(eval(input()))
i = 7
b = 0
n = 0

while b < size(a):
	m = ((a[b]**i))
	i += 0
	b += 1
	m += m
x = (m/b[n])**1/i
print(x)

	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:22:35) 
-- CODE:
from numpy import*
a = array(eval(input()))
i = 7
b = 0
n = 0

while b < size(a):
	m = ((a[b]**i))
	i += 0
	b += 1
	m += m
x = (m/a[b])**1/i
print(x)

	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:23:06) 
-- CODE:
from numpy import*
a = array(eval(input()))
i = 7
b = 0
n = 0

while b < size(a):
	m = ((a[b]**i))
	i += 0
	b += 1
	m += m
x = (m/a[b])**1/i
print(x)

	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:23:17) 
-- CODE:
from numpy import*
a = array(eval(input()))
i = 7
b = 0
n = 0

while b < size(a):
	m = ((a[b]**i))
	i += 0
	b += 1
	m += m
x = (m/a[b])**1/7
print(x)

	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:24:21) 
-- CODE:
from numpy import*
a = array(eval(input()))
i = 7
b = 0
n = 0

while b != size(a):
	m = ((a[b]**i))
	i += 0
	b += 1
	m += m
x = (m/a[b])**1/7
print(round(x,2)

	
	
-- ERROR:
File "XXXX", line 17
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:24:27) 
-- CODE:
from numpy import*
a = array(eval(input()))
i = 7
b = 0
n = 0

while b != size(a):
	m = ((a[b]**i))
	i += 0
	b += 1
	m += m
x = (m/a[b])**1/7
print(round(x,2)
-- ERROR:
File "XXXX", line 14
    
                    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:24:29) 
-- CODE:
from numpy import*
a = array(eval(input()))
i = 7
b = 0
n = 0

while b != size(a):
	m = ((a[b]**i))
	i += 0
	b += 1
	m += m
x = (m/a[b])**1/7
print(round(x,2)
-- ERROR:
File "XXXX", line 14
    
                    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:24:33) 
-- CODE:
from numpy import*
a = array(eval(input()))
i = 7
b = 0
n = 0

while b != size(a):
	m = ((a[b]**i))
	i += 0
	b += 1
	m += m
x = (m/a[b])**1/7
print(round(x,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:24:40) 
-- CODE:
from numpy import*
a = array(eval(input()))
i = 7
b = 0
n = 0

while b != size(a):
	m = ((a[b]**i))
	i += 0
	b += 1
	m += m
x = (m/a[b])**1/7
print(round(x,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:25:19) 
-- CODE:
from numpy import*
a = array(eval(input()))
i = 7
b = 0
n = 0

while b != size(a):
	m = (a[b]**i)
	i += 0
	b += 1
	m += m
x = (m/a[b])**1/7
print(round(x,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:25:22) 
-- CODE:
from numpy import*
a = array(eval(input()))
i = 7
b = 0
n = 0

while b != size(a):
	m = (a[b]**i)
	i += 0
	b += 1
	m += m
x = (m/a[b])**1/7
print(round(x,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:30:13) 
-- CODE:
from numpy import*
v = array(eval(input()))
i = 7
b = 0
n = 0

while b < size(v):
	m = v[b]**i
	i += 0
	b += 1
	n +=m
x = (n/v[b])**1/i
print(round(x,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:30:31) 
-- CODE:
from numpy import*
v = array(eval(input()))
i = 7
b = 0
n = 0

while b < size(v):
	m = v[b]**i
	i += 0
	b += 1
	n +=m
x = (n/v[b])
print(round(x,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:30:34) 
-- CODE:
from numpy import*
v = array(eval(input()))
i = 7
b = 0
n = 0

while b < size(v):
	m = v[b]**i
	i += 0
	b += 1
	n +=m
x = (n/v[b])
print(round(x,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:30:40) 
-- CODE:
from numpy import*
v = array(eval(input()))
i = 7
b = 0
n = 0

while b < size(v):
	m = v[b]**i
	i += 0
	b += 1
	n +=m

print(round(n,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:31:27) 
-- CODE:
from numpy import*
v = array(eval(input()))
i = 7
b = 0
n = 0

while b < size(v):
	m = v[b]**i
	i += 0
	b += 1
	n +=m
x = n/v[b]
print(round(x,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:31:44) 
-- CODE:
from numpy import*
v = array(eval(input()))
i = 7
b = 0
n = 0

while b < size(v):
	m = v[b]**i
	i += 0
	b += 1
	n +=m
x = n/b
print(round(x,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:32:02) 
-- CODE:
from numpy import*
v = array(eval(input()))
i = 7
b = 0
n = 0

while b < size(v):
	m = v[b]**i
	i += 0
	b += 1
	n +=m
x = (n/b)**1/i
print(round(x,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:32:18) 
-- CODE:
from numpy import*
v = array(eval(input()))
i = 7
b = 0
n = 0

while b < size(v):
	m = v[b]**i
	i += 0
	b += 1
	n +=m
x = (n/b)**1/i
print(round(,2))
-- ERROR:
File "XXXX", line 13
    print(round(,2))
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:32:20) 
-- CODE:
from numpy import*
v = array(eval(input()))
i = 7
b = 0
n = 0

while b < size(v):
	m = v[b]**i
	i += 0
	b += 1
	n +=m
x = (n/b)**1/i
print(round(n,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:32:45) 
-- CODE:
from numpy import*
v = array(eval(input()))
i = 7
b = 0
n = 0

while b != size(v):
	m = v[b]**i
	i += 0
	b += 1
	n +=m
x = (n/b)**1/i
print(round(x,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:33:30) 
-- CODE:
from numpy import*
v = array(eval(input()))
i = 7
b = 0
n = 0

while b > 0:
	m = v[b]**i
	i += 0
	b += 1
	n +=m
x = (n/b)**1/i
print(round(x,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:34:12) 
-- CODE:
from numpy import*
v = array(eval(input()))
i = 7
b = 0
n = 0

while b < size(v):
	m = v[b]**i
	i += 0
	b += 1
	n +=m
x = (n/b)**1/i
print(round(x,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:36:05) 
-- CODE:
from numpy import*
v = array(eval(input()))
i = 7
b = 0
n = 0

while b < v[-1]:
	m = v[b]**i
	i += 0
	b += 1
	n +=m
x = (n/b)**1/i
print(round(x,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:36:22) 
-- CODE:
from numpy import*
v = array(eval(input()))
i = 7
b = 0
n = 0

while b < v[-1]:
	m = v[b]**i
	i += 0
	b += 1
	n +=m
x = (n/b)**1/i
print(round(x,2))
-- EXECUTION TIME:
0.514976
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1795/3138/main.py", line 8, in <module>
    m = v[b]**i
IndexError: index 7 is out of bounds for axis 0 with size 7

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:37:16) 
-- CODE:
from numpy import*
v = array(eval(input()))
i = 7
b = 0 
n = 0
z = 1**i
while b < v[-1]:
	m = v[b]**i
	i += 0
	b += 1
	n +=m
x = (n/b)**z
print(round(x,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:37:32) 
-- CODE:
from numpy import*
v = array(eval(input()))
i = 7
b = 0 
n = 0
z = 1**i
while b < size(v):
	m = v[b]**i
	i += 0
	b += 1
	n +=m
x = (n/b)**z
print(round(x,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:38:54) 
-- CODE:
from numpy import*
v = array(eval(input()))
i = 7
b = 0 
n = 0
z = 1**i
while b < size(v):
	m = v[b]**i
	i += 0
	b += 1
	n +=m
x = (n/b)**z
print(round(x,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:38:59) 
-- CODE:
from numpy import*
v = array(eval(input()))
i = 7
b = 0 
n = 0
z = 1**i
while b < size(v):
	m = v[b]**i
	i += 0
	b += 1
	n +=m
x = (n/b)**z
print(round(x,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:39:10) 
-- CODE:
from numpy import*
v = array(eval(input()))
i = 7
b = 0 
n = 0
z = 1**i
while b < size(v):
	m = v[b]**i
	i += 0
	b += 1
	n +=m
x = (n/b)**z
print(round(x,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:41:04) 
-- CODE:
from numpy import*
v = array(eval(input()))
i = 7
b = 0 
n = 0
z = 1**i
while b < size(v):
	m = v[b]**i
	i += 0
	b += 1
	n +=m
x = (n/b)**z
print(round(x,2))
a = (2**7)+(6**7)+(3**7)+(1**7)
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:42:12) 
-- CODE:
from numpy import*
v = array(eval(input()))
i = 7
b = 0 
n = 0
z = 1**i
while b < size(v):
	m = v[b]**i
	i += 0
	b += 1
	n +=m
x = (n/b)**z
print(v(-1))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:42:20) 
-- CODE:
from numpy import*
v = array(eval(input()))
i = 7
b = 0 
n = 0
z = 1**i
while b < size(v):
	m = v[b]**i
	i += 0
	b += 1
	n +=m
x = (n/b)**z
print(v[-1])

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:44:57) 
-- CODE:
from numpy import*
v = array(eval(input()))
i = 7
b = 0 
n = 0
z = 1**i
while b != size(v):
	m = v[b]**i
	i += 0
	b += 1
	n +=m
x = (n/b)**z
print(round(x,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:45:18) 
-- CODE:
from numpy import*
v = array(eval(input()))
i = 7
b = 0 
n = 0
z = 1**i
while b != max(v):
	m = v[b]**i
	i += 0
	b += 1
	n +=m
x = (n/b)**z
print(round(x,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:45:32) 
-- CODE:
from numpy import*
v = array(eval(input()))
i = 7
b = 0 
n = 0
z = 1**i
while b != max[v]:
	m = v[b]**i
	i += 0
	b += 1
	n +=m
x = (n/b)**z
print(round(x,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:46:01) 
-- CODE:
from numpy import*
v = array(eval(input()))
i = 7
b = 0 
n = 0
z = 1**i
while b <= size(v):
	m = v[b]**i
	i += 0
	b += 1
	n +=m
x = (n/b)**z
print(round(x,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:46:11) 
-- CODE:
from numpy import*
v = array(eval(input()))
i = 7
b = 0 
n = 0
z = 1**i
while b < size(v):
	m = v[b]**i
	i += 0
	b += 1
	n +=m
x = (n/b)**z
print(round(x,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:46:18) 
-- CODE:
from numpy import*
v = array(eval(input()))
i = 7
b = 0 
n = 0
z = 1**i
while b <= size(v):
	m = v[b]**i
	i += 0
	b += 1
	n +=m
x = (n/b)**z
print(round(x,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:49:37) 
-- CODE:
from numpy import*
v = array(eval(input()))
i = 7
b = 1 
n = 0
z = 1**i
while b < size(v):
	m = v[b-1]**i
	i += 0
	b += 1
	n +=m
x = (n/b)**z
print(round(x,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:49:51) 
-- CODE:
from numpy import*
v = array(eval(input()))
i = 7
b = 1 
n = 0
z = 1**i
while b < size(v):
	m = v[b-1]**i
	i += 0
	b += 1
	n +=m
x = (n/b)**z
print(round(x,2))

-- EXECUTION TIME:
0.504588
-- TEST CASE 1:
---- input:
[1.9,2.9,3.9,4.9,5.9,6.9,7.9]
---- correct output:
6.38
---- user output:
153837.18
-- TEST CASE 2:
---- input:
[1.1,2.2,3.3,4.4,5.5,6.6]
---- correct output:
5.33
---- user output:
31447.42
-- TEST CASE 3:
---- input:
[1.1,2.1,3.1,4.1,5.1]
---- correct output:
4.18
---- user output:
4481.75
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:50:52) 
-- CODE:
from numpy import*
v = array(eval(input()))
i = 7
b = 0 
n = 0
z = 1**i
while b < v[-1]:
	m = v[b]**i
	i += 0
	b += 1
	n +=m
x = (n/b)**z
print(round(x,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:51:16) 
-- CODE:
from numpy import*
v = array(eval(input()))
i = 7
b = 0 
n = 0
z = 1**i
while b < max[v]:
	m = v[b]**i
	i += 0
	b += 1
	n +=m
x = (n/b)**z
print(round(x,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:51:24) 
-- CODE:
from numpy import*
v = array(eval(input()))
i = 7
b = 0 
n = 0
z = 1**i
while b < max(v):
	m = v[b]**i
	i += 0
	b += 1
	n +=m
x = (n/b)**z
print(round(x,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:51:38) 
-- CODE:
from numpy import*
v = array(eval(input()))
i = 7
b = 0 
n = 0
z = 1**i
while b < size(v):
	m = v[b]**i
	i += 0
	b += 1
	n +=m
x = (n/b)**z
print(round(x,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:51:57) 
-- CODE:
from numpy import*
v = array(eval(input()))
i = 7
b = 0 
n = 0
z = 1/i
while b < size(v):
	m = v[b]**i
	i += 0
	b += 1
	n +=m
x = (n/b)**z
print(round(x,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:52:01) 
-- CODE:
from numpy import*
v = array(eval(input()))
i = 7
b = 0 
n = 0
z = 1/i
while b < size(v):
	m = v[b]**i
	i += 0
	b += 1
	n +=m
x = (n/b)**z
print(round(x,2))

-- EXECUTION TIME:
0.402646
-- TEST CASE 1:
---- input:
[1.9,2.9,3.9,4.9,5.9,6.9,7.9]
---- correct output:
6.38
---- user output:
6.38
-- TEST CASE 2:
---- input:
[1.1,2.2,3.3,4.4,5.5,6.6]
---- correct output:
5.33
---- user output:
5.33
-- TEST CASE 3:
---- input:
[1.1,2.1,3.1,4.1,5.1]
---- correct output:
4.18
---- user output:
4.18
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
